--- a/tapp/paper.bib
+++ b/tapp/paper.bib
@@ -1,12 +1,13 @@
-@unpublished{datadiff,
+@other{datadiff,
  Author = {Charles Sutton and Tim Hobson and James Geddes and Rich Caruana},
  Title = { Data Diff: Interpretable, Executable Summaries of Changes in Distributions for Data Wrangling},
- Year = {2018}
+ Year = {2018},
+ howpublished = {Proceedings of KDD}
 }
 @inproceedings{providers,
   title={Themes in information-rich functional programming for internet-scale data sources},
   author={Syme, Don and Battocchi, Keith and Takeda, Kenji and Malayeri, Donna and Petricek, Tomas},
-  booktitle={Proceedings of the 2013 workshop on Data driven functional programming},
+  booktitle={Proceedings of DDFP},
   pages={1--4},
   year={2013},
   organization={ACM}
@@ -14,10 +15,10 @@
 @inproceedings{thegamma,
   title={Data exploration through dot-driven development},
   author={Petricek, Tomas},
-  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  booktitle={Proceedings of ECOOP},
   volume={74},
   year={2017},
-  organization={Schloss Dagstuhl-Leibniz-Zentrum fuer Informatik}
+  organization={Schloss Dagstuhl}
 }
 @inproceedings{dataflow,
   title={Dataflow Notebooks: Encoding and Tracking Dependencies of Cells},
@@ -29,7 +30,7 @@
 @inproceedings{noworkflow,
   title={Collecting and analyzing provenance on interactive notebooks: when IPython meets noWorkflow},
   author={Pimentel, Jo{\~a}o Felipe Nicolaci and Braganholo, Vanessa and Murta, Leonardo and Freire, Juliana},
-  booktitle={Workshop on the Theory and Practice of Provenance (TaPP), Edinburgh, Scotland},
+  booktitle={Workshop on the Theory and Practice of Provenance (TaPP)},
   pages={155--167},
   year={2015}
 }
@@ -43,7 +44,7 @@
 @inproceedings{kepler,
   title={Kepler: an extensible system for design and execution of scientific workflows},
   author={Altintas, Ilkay and Berkley, Chad and Jaeger, Efrat and Jones, Matthew and Ludascher, Bertram and Mock, Steve},
-  booktitle={Scientific and Statistical Database Management, 2004. Proceedings. 16th International Conference on},
+  booktitle={Scientific and Statistical Database Management},
   pages={423--424},
   year={2004},
   organization={IEEE}
@@ -79,7 +80,7 @@
   year={2014}
 }
 @article{roslyn,
-  title={The Roslyn Project, Exposing the C\# and VB compiler’s code analysis},
+  title={The Roslyn Project, Exposing the C\# and VB compiler's code analysis},
   author={Ng, Karen and Warren, Matt and Golde, Peter and Hejlsberg, Anders},
   journal={White paper, Microsoft},
   year={2011}
@@ -114,8 +115,8 @@
 }
 @article{incremental,
   title={Incremental compilation in Magpie},
-  author={Schwartz, Mayer D and Delisle, Norman M and Begwani, Vimal S},
-  journal={ACM SIGPlan Notices},
+  author={Schwartz, Mayer D and Delisle, Norman M and Begwani, V S},
+  journal={SIGPLAN Not.},
   volume={19},
   number={6},
   pages={122--131},
@@ -135,10 +136,8 @@
  series = {HILDA '16},
  year = {2016},
  pages = {7:1--7:6},
- articleno = {7},
  numpages = {6},
  publisher = {ACM},
- address = {New York, NY, USA},
 } 
 @other{livegamma,
   title={Design and implementation of a live coding environment for data science},
