--- a/tapp/paper.tex
+++ b/tapp/paper.tex
@@ -1,12 +1,28 @@
 \documentclass[sigplan]{acmart}\settopmatter{printfolios=true,printccs=false,printacmref=false}
 \usepackage{flushend}
 
-\acmConference[PL'18]{ACM SIGPLAN Conference on Programming Languages}{January 01--03, 2018}{New York, NY, USA}
+% What is the type of a cell in Python? Only the result? You say exports must 
+% be explicitly defined - so the type of the cell is the type of the export?
+
+% The authors say (page 2), "The data store keeps version
+% history and annotates data with metdata such as types, inferred
+% semantics and provenance information."  How these semantics and
+% provenance information are inferred and represented, however, is
+% not elaborated on (but only very briefly mentioned in Section 3.3,
+% bottom of page 3).  The role of provenance thus remains unclear to me.
+
+% How does Wrattler compare to other notebook systems in terms of storage and compute overhead, 
+% since a) extra data needs to be maintained, and 
+%  b) the state and the runtime are now separated? It would be great to include some (preliminary) numbers in this regard. 
+
+
+
+\acmConference[TaPP 2018]{10th USENIX Workshop on The Theory and Practice of Provenance}{July 11--12, 2018}{London, UK}
 \acmYear{2018}
 \acmISBN{} % \acmISBN{978-x-xxxx-xxxx-x/YY/MM}
 \acmDOI{} % \acmDOI{10.1145/nnnnnnn.nnnnnnn}
 \startPage{1}
-\setcopyright{none}
+\setcopyright{rightsretained}
 
 \bibliographystyle{ACM-Reference-Format}
 
@@ -15,22 +31,25 @@
 
 \author{Tomas Petricek}
 \affiliation{
+  \institution{University of Kent}
+}
+\affiliation{
   \institution{The Alan Turing Institute}
 }
 \email{tomas@tomasp.net}
-\author{Charles Sutton}
-\affiliation{
-  \institution{The University of Edinburgh}
-}
-\additionalaffiliation{
-  \institution{The Alan Turing Institute and Google}
-}
-\email{csutton@inf.ed.ac.uk}
 \author{James Geddes}
 \affiliation{
   \institution{The Alan Turing Institute}
 }
 \email{jgeddes@turing.ac.uk}
+\author{Charles Sutton}
+\affiliation{
+  \institution{The University of Edinburgh}
+}
+\affiliation{
+  \institution{The Alan Turing Institute and Google}
+}
+\email{csutton@inf.ed.ac.uk}
 
 \definecolor{cmtclr}{rgb}{0.0,0.6,0.0}
 \definecolor{kvdclr}{rgb}{0.0,0.0,0.6}
@@ -66,10 +85,10 @@
 \newcommand{\blbl}[1]{\textnormal{\textcolor{numclr}{\sffamily #1}}}
 
 \begin{abstract}
-Notebook systems such as Jupyter became a popular programming environment for data science, because 
+Notebooks such as Jupyter became a popular environment for data science, because 
 they support interactive data exploration and provide a convenient way of interleaving code, 
-comments and visualizations. However, most notebook systems use an architecture that makes
-reproducibility and versioning difficult and limits the interaction model.
+comments and visualizations. Alas, most notebook systems use an architecture that leads to a 
+limited model of interaction and makes reproducibility and versioning difficult.
 
 In this paper, we present Wrattler, a new notebook system built around provenance that addresses
 the above issues. Wrattler separates state management from script evaluation and controls the 
@@ -77,42 +96,44 @@ evaluation using a dependency graph maintained in the web browser. This allows r
 interactivity, an efficient evaluation through caching, guarantees reproducibility and makes it 
 possible to support versioning.
 \end{abstract}
-\keywords{notebook, dependency graph, live coding, AI}
+%\keywords{notebook, dependency graph, live coding}
 \maketitle
 
 \section{Introduction}
-Notebooks \cite{ipython,jupyter} are literate programming \cite{literate} develoment
-environments that allow data analyst to combine text, code and code outputs. Notebooks make
-it easy to run code and see results. To further aid reproducible, iterative and exploratory data 
-science, notebook systems should also support:
+Notebooks \cite{ipython,jupyter} are literate programming \cite{literate} systems
+that allow interleaving text, code and outputs. To aid reproducible, 
+exploratory data science, notebook systems should provide:
 
+\vspace{-0.3em}
 \paragraph{Richer interaction model.}
 Web browsers are increasingly powerful and allow moving parts of data exploration to the client-side. 
-Simple code changes should be evaluated efficiently using a cache and notebooks
-should give live previews when writing code to perform simple data exploration.
+Notebooks should leverage this and give live previews when writing code to perform simple data exploration.
 
+\vspace{-0.3em}
 \paragraph{Transparent state management.}
 The state maintained by a notebook should be transparent and accessible to external tools. This
-would allow versioning of state and development of tools to explore and manipulate the notebook state.
+would allow versioning of state and development of tools that provide hints based on the notebook state.
 
+\vspace{-0.3em}
 \paragraph{Multiple languages and tools.} 
 A notebook should make it easy to combine multiple programming languages. A cell written in one
 language should be able to automatically access data frames defined in other languages.
 
+\vspace{-0.3em}
 \paragraph{Improved reproducibility.} 
 Changing code in a cell should invalidate results that depend on data frames defined in 
 the cell. Reverting a change should immediately revert the result to the previous one
 and show it immediately using a cache.
 
-\newpage
-~
-
+\vspace{0.5em}
 \noindent
-In this paper, we present Wrattler, a new notebook system that supports
-the above features. We follow a line of work combining provenance tracking with notebooks 
-\cite{noworkflow,dataflow}, but rather than extending existing systems, we revisit
-two key aspects of the notebook architecture (Section~\ref{sec:arch}). 
+Supporting these is a challenge that combines several research areas. We need programming 
+language techniques to efficiently update live previews during editing, provenance methods to 
+track data dependencies and data representation that can be shared across langauges.
 
+Wrattler is a new notebook system that supports the above features. We follow a line of work combining 
+provenance tracking with notebooks \cite{noworkflow,dataflow}, but rather than extending existing 
+systems, we revisit two core aspects of the notebook architecture (Section~\ref{sec:arch}). 
 First, Wrattler uses a \emph{dependency graph} to track provenance between cells and even function calls 
 inside individual cells (Section~\ref{sec:comp-deps}). When a cell is changed, relevant parts of a graph
 are invalidated. This guarantees reproducibility and enables more efficient re-computation.
@@ -124,9 +145,9 @@ Together, these two changes to the standard architecture of notebook systems mak
 (with efficient re-computation on change that enables live preview during data exploration).
 
 \begin{figure}[b]
-\vspace{-1em}
+\vspace{-2em}
 \includegraphics[scale=0.6]{diagram.pdf}
-\vspace{-0.5em}
+\vspace{-1.5em}
 \caption{\small{In notebook systems such as Jupyter, state and execution is managed by a kernel. In
   Wrattler, those functions are split between data store and language runtimes. Language runtimes 
   can run on the server-side (e.g.~Python) or client-side (e.g.~TheGamma).}}
@@ -147,98 +168,67 @@ metadata such as types, inferred semantics and provenance information.
 
 \paragraph{Language runtimes.} Code in notebook cells is evaluated by language runtimes.
 The runtimes read input data from and write results back to the data store. Wrattler supports
-language runtimes that run code on the server (similar to Jupyter kernels), but also language
-runtimes that parse and evaluate code directly in the browser.
+language runtimes that run code on the server (similar to Jupyter), but also browser-based 
+langauge runtimes.
 
 \paragraph{Notebook.} The notebook is displayed in a web browser and orchestrates 
 all other components. The browser builds a dependency graph between cells or individual 
 calls. It invokes language runtimes to evaluate code that has changed,
 and reads data from the data store to display results.  
 
-\section{Wrattler components}
-\label{sec:comp}
-
-Wrattler consists of a notebook user interface running in the web browser, which communicates 
-with the data store and multiple server-side language runtimes. We also provide an integration 
-with a simple data exploration language TheGamma \cite{thegamma} that has a fully client-side language
-runtime. 
-
-\subsection{TheGamma script}
-\label{sec:comp-gamma}
-
-The Wrattler architecture supports languages that require running a separate language runtime
-as a server, but also languages that can be parsed and evaluated in the browser. To illustrate this, 
-we integrated Wrattler with TheGamma~\cite{thegamma}, a simple browser-based language 
-for data exploration.
-
-As an example, we use a data set with broadband speed published by the UK government \cite{ofcom}.
-The following script written using TheGamma loads the online CSV file, groups rows by whether they represent
-rural or urban area and then calculates average download speed for both area kinds:
-
-\noindent
-\begin{equation*}
-\hspace{-3em}
-\begin{array}{l}
-\ident{web.loadTable}(\str{https://.../bb2014.csv}).\ident{explore}.\\
-\quad\qident{group data}.\qident{by Urban/rural}.\\
-\qquad\qident{average Download speed (Mbit/s) 24 hrs}  
-\end{array}
-\end{equation*}
-
-\noindent
-Identifiers such as \qident{by Urban/rural} are generated by a \emph{type provider} \cite{providers} 
-and the user typically interacts by selecting one of generated members through an auto-complete
-(hence the long explicity names are acceptable). For the purpose of this paper, the most 
-important aspect is that TheGamma scripts can be parsed, checked and evaluated in the browser.
-
-\subsection{Dependency graph}
-\label{sec:comp-deps}
-
-When opening a notebook, Wrattler parses the source of the notebook (consisting of text cells and
-code cells) and constructs a dependency graph, which serves as a runtime representation of the
-notebook. The parsing of code cells is done by language runtimes that parse and statically analyse 
-code and constructs parts of the dependency graph.
-
-Wrattler uses a \emph{data frame} as a primary format for passing data between cells.
-Data frames represent tables with multiple (named) columns and (anonymous) rows. Data frames
-have a first-class support in most data science languages.
 
 \begin{figure}
 \vspace{-0.5em}
 \includegraphics[scale=1,trim=0.5cm 0.5cm 0.5cm 0.5cm]{graph.pdf}
 \vspace{-0.5em}
-\caption{\small{Dependency graph of a sample notebook with three cells. The cells are written
-in Python, Wrattler script and JavaScript. The browser builds a fine-grained dependency graph
-for Wrattler script that can be parsed and analysed in the browser.}}
+\caption{\small{Dependency graph of a sample notebook: The first (Python) cell downloads data and 
+exports the result as a data frame; the second (TheGamma) cell performs data cleaning and the third 
+(JavaScript) cell creates a visualization. Language runtime for TheGamma runs in the browser and 
+creates a fine-grained graph (which allows an efficient live previews), while Python and JavaScript 
+runtimes create just one node for the whole source code.}}
 \label{fig:deps}
 \vspace{-1em}
 \end{figure}
 
-As an example, consider a simpler notebook with three cells. The first cell, written in Python,
-downloads data and exports the result as a data frame; the second cell is written in TheGamma script
-and performs data cleaning and the third cell creates a visualization in JavaScript. The
-resulting dependency graph is shown in Figure~\ref{fig:deps}.
+\section{Wrattler components}
+\label{sec:comp}
 
-Wrattler creates two nodes for each cell, representing the cell as a whole and its source
-code. In addition, it creates a node for each data frame exported by a cell (e.g.~the rightmost
-node in the first cell). Code in subsequent cells can depend on data frames exported from earlier
-cell, which is captured as a dependency in the graph. 
+Wrattler runs in the web browser and communicates with the data store and language runtimes
+that may run on the server or in the browser. An example of browser-based language runtime is
+TheGamma \cite{thegamma}, discussed in Section~\ref{sec:comp-gamma}.
 
-The dependency graph is updated after each code change and so it needs to be constructed efficiently 
-in the browser. Language runtime that run on the client-side create a more fine-grained 
-dependency graph with a node for each operation (such as member access or a function call). This 
-is the case in the  second cell in Figure~\ref{fig:deps}. This allows live update of results when 
-code changes as we only need to re-evaluate small parts of code in a cell. 
+\subsection{Dependency graph}
+\label{sec:comp-deps}
+
+At runtime, Wrattler maintains a dependency graph that is composed from sub-graphs
+created by individual language runtimes. The graph is acyclic and a node can only depend on earlier 
+nodes. Each node has a value which may be:
+%
+\begin{itemize}
+\item A language-specific value that Wrattler does not understand. This is kept in the browser
+  and re-computed when the notebook is re-opened.
+\item A data frame. Data frame is stored in the data store and browser keeps a reference (URL) 
+  of the frame. This is understood by all language runtimes and provides a way of exchanging
+  data between multiple languages. 
+\end{itemize}
+%
+Figure~\ref{fig:deps} shows a sample dependency graph. Wrattler creates two nodes for each cell
+(representing the cell and its source code) and a node for each data frame exported by a cell 
+(e.g.~the rightmost node in the first cell). Nodes in subsequent cells may depend on data frames
+exported by earlier cells.
+
+Wrattler treats data frames in a special way. They are stored in data store and each langauge 
+runtime is responsible for loading them into a native language representation (e.g. pandas in 
+Python and array of records in JavaScript). 
 
 \paragraph{Dependency graph construction.} 
-The dependency graph is updated after every code change. Wrattler first parses each 
-cell, producing a single syntactic element for Python and JavaScript cells (representing the entire 
-source code) and a syntax tree for TheGamma (representing member accesses and other 
-constructs). The syntax tree for the entire notebook is then a list of elements produced for each 
-cell.
- 
-After parsing, Wrattler walks over the syntax tree recursively and binds a dependency graph node
-to each syntactic element in the tree using a process decribed in Figure~\ref{fig:bind}. 
+The dependency graph is updated after every code change. Wrattler invokes individual langauge 
+runtimes to parse each cell. Language runtimes that run in the browser (e.g.~TheGamma) produce
+a fine-grained syntax tree. The result of parsing the whole notebook is then a list of elements
+obtained for each cell.
+
+Wrattler then walks over the syntax tree and binds a dependency graph node
+to each syntactic element using a process decribed in Figure~\ref{fig:bind}. 
 The \emph{antecedents} of a node are the nodes that it depends on. This typically includes 
 inputs for an operation or instance on which a member access is performed. 
 
@@ -246,8 +236,8 @@ inputs for an operation or instance on which a member access is performed.
 Nodes in the dependency graph can be annotated with information such as the evaluated value
 of the syntactic element that the node represents. An important property of the binding process
 (Figure~\ref{fig:bind}) is that, if there is no change in antecedents of a node, binding will 
-return the same node as before. This means that if we evaluate a value for a given node in a 
-dependency graph and attach it to a node, the value will be cached and reused. 
+return the same node as before. As a result, previously evaluated values attached to nodes
+in the graph are reused.
 
 Wrattler re-evaluates parts of the dependency graph on demand and the displayed results and 
 visualizations always reflect the current source code in the notebook. When the evaluation 
@@ -261,47 +251,39 @@ runtime associated with the language of the node:
 \item For TheGamma and JavaScript nodes, the language runtime collects values of the 
   dependencies and runs the operation that the node represents in the browser.
 \end{enumerate}
-%
-Wrattler also uses the dependency graph for type checking. Just like evaluation, type checking
-is done by recursively walking over the dependency graph and annotating the nodes with their 
-type. This step is only relevant for cells written in statically typed languages, but it provides
-a quick feedback, because it does not need to evaluate the code.
 
 \subsection{Data store}
 \label{sec:comp-data}
 
 The data store enables communication between individual Wrattler components and provides a way for 
-persistently stroing input data. It stores raw input data, data frames and multiple versions of the 
-dependency graph. Data frames stored in the data store are associated with the hash produced by the 
-binding process outlined in Figure~\ref{fig:bind} and are immutable. When the notebook changes, 
-new nodes with new hashes are created. New data frames are appended, rather than overwriting 
-existing state.
+persistently storing input data. Data frames stored in the data store are associated with the hash 
+produced by the binding process outlined in Figure~\ref{fig:bind} and are immutable. When the 
+notebook changes, new nodes with new hashes are created and appended to the data store. This means 
+that language runtimes can cache them and avoid fetching data from data store each time they need 
+to evaluate a code snippet. 
 
-External input data files imported into Wrattler notebooks (such as downloaded web pages) are 
-stored as binary blobs. Data frames are currently stored in JSON format (as an array of records),
-but we intend to use a suitable database system in the future. Data frames are used for
-communication between multiple cells of a Wrattler notebook. To make a data frame available to 
-subsequent cells, a cell can export and store a data frame into the data store (the
-key is the hash of the node representing the data frame). 
+External inputs imported into Wrattler notebooks (such as downloaded web pages) are stored as 
+binary blobs. Data frames are stored in JSON format (as an array of records),
+but we intend to use a suitable database in the future. During the binding process 
+(Section~\ref{sec:comp-deps}), a langauge runtime identifies imported and exported data frames 
+for each cell (e.g.~by static analysis of the code). Those are then represented as hashes (keys)
+referring to a location in the data store.
 
 The data store also supports a mechanism for annotating data frames with 
-semantic information. Columns can be annotated with primitive data type such as 
-date or floating-point number. Columns can be annotated with semantic annotation that indicates
-the meaning of the column -- for example, address or longitude and latitude. Finally, columns,
-rows and individual cells of the data frame can be annotated with other metadata such as their
-data source.
+semantic information. Columns can be annotated with primitive data types (date, floating-point 
+number) and semantic annotation indicating their meaning (address or longitude and latitude). 
+Columns, rows and individual cells of the data frame can also be annotated with custom metadata 
+such as their data source or accuracy.
 
 \begin{figure}
 \vspace{-1em}
 \begin{equation*}
-\hspace{-6em}\begin{array}{l}
+\hspace{-3em}\begin{array}{l}
 \kvd{procedure}~\ident{bind}(\textit{cache}, \textit{syn})~=\\
-\quad \kvd{let}~h = \{ \ident{hash}(\ident{kind}(\textit{syn})) \} \\  
-\quad \qquad \cup~ \{\ident{hash}(c) \,|\, c\in\ident{antecedents}(\textit{syn}) \}\\
+\quad \kvd{let}~h = \ident{hash}(\{\ident{kind}(\textit{syn}) \}\cup \ident{antecedents}(\textit{syn}))\\
 \quad \kvd{if}~\ident{not}~\ident{contains}(\textit{cache}, h)~\kvd{then}\\
 \quad \quad \kvd{let}~n = \emph{fresh node}\\
-\quad \quad \ident{value}(n) \leftarrow \ident{Unevaluated} \\
-\quad \quad \ident{hash}(n) \leftarrow h\\
+\quad \quad \ident{value}(n), \ident{hash}(n) \leftarrow \ident{Unevaluated}, h \\
 \quad \quad \ident{set}(\textit{cache}, h, n) \\
 \quad \ident{lookup}(\textit{cache}, h)\\
 \end{array}
@@ -314,6 +296,7 @@ data source.
   is created. We set its hash, indicate that its value has not been evaluated and
   add it to the cache.}}
 \label{fig:bind}
+\vspace{-1em}
 \end{figure}
 
 In addition to storing the raw data, the data store also persistently stores the current and
@@ -321,38 +304,34 @@ multiple past versions of the dependency graph constructed from the notebook (sa
 explicit checkpoint). This makes it possible to analyse the history of a notebook and track how
 data is transformed by the computation in a notebook.
 
-\subsection{Third-party tools}
-\label{sec:comp-ai}
+\subsection{TheGamma script}
+\label{sec:comp-gamma}
 
-The Wrattler architecture enables integration of third-party tools that analyse the notebook
-or data it uses and provide hints to the data analyst. Most notably, such tools include AI 
-assistants that help with tedious data cleaning and pre-processing tasks. 
+The Wrattler architecture supports languages that can be parsed and evaluated in the browser.
+To illustrate this, we integrated Wrattler with TheGamma~\cite{thegamma}, a simple browser-based 
+language for data exploration.
 
-As an example, datadiff \cite{datadiff} is an AI assistant that reads two specified data frames from the
-data store and suggests a script that transforms the data in the second data frame to match the
-format of the first data frame. The AI assistant does not automatically transofrm the data, but
-instead, produces a new cell in TheGamma script that can be reviewed by the data analyst. 
-For example:
+The Figure~\ref{fig:gamma} shows TheGamma cell in Wrattler during editing. The example uses
+broadband speed data published by the UK government \cite{ofcom} and calculates average download
+speed in urban and rural areas, respectively. TheGamma supports a rich interactive model in two ways:
 %
-\begin{equation*}
-\begin{array}{l}
-\ident{datadiff(broadband2014, broadband2015)}\\
-\quad.\ident{drop\_column}(\str{WT\_national})\\
-\quad.\ident{drop\_column}(\str{WT\_ISP})\\
-\quad.\ident{recode\_column}(\str{URBAN}, [\num{1}, \num{2}], [\str{Urban},\str{Rural}])
-\end{array}  
-\end{equation*}
-%
-The script specifies that two columns should be dropped from the corrupted second data frame and
-one column needs to be recoded (turning $\num{1}$ and $\num{2}$ into strings
-\strf{Urban} and \strf{Rural}). 
+\begin{itemize}
+\item The script is evaluated on-the-fly during editing and a live preview is shown 
+  (below the code editor).
+\item All code can be written using autocomplete that offers available members (representing
+  aggregation operations). Rather than writing code, user repeatedly selects one of the offered 
+  members (which are provided by a type provider \cite{providers} running in the browser).
+\end{itemize}
+
+For the purpose of this paper, the most important aspect of TheGamma is that scripts can be 
+parsed and evaluated in the browser. This allows more interactive style of data exploration
+without round-trips to re-evaluate modified code.
 
 \section{Properties of Wrattler}
 \label{sec:results}
 
-The Wrattler architecture outlined in Section~\ref{sec:arch} leads to a number of properties that
-are difficult to obtain with traditional notebook systems. In this section, we discuss the 
-properties and briefly discuss our prototype implementation.
+The Wrattler architecture outlined in Section~\ref{sec:arch} allowed us to develop a prototype 
+system with a number of properties that are difficult to obtain with traditional notebooks.
 
 \subsection{Reproducible, live and smart}
 The two most important aspects of the Wrattler architecture are that it separates the state from 
@@ -376,53 +355,64 @@ need to be calculated. The fine-grained structure of the dependency graph for Th
 makes it possible to update previews instantly.
 
 \paragraph{Polyglot.} Sharing the state via data store makes it possible to combine multiple
-langauge runtimes, as long as they support sharing data via data frames. In our prototype, this
+language runtimes, as long as they support sharing data via data frames. In our prototype, this
 includes R, JavaScript and TheGamma script, but the extensibility model allows adding further
 languages.
 
 \subsection{Wrattler prototype}
 
 A prototype implementation of the Wrattler system is available on GitHub (\url{http://github.com/wrattler}).
-The prototype implements language runtimes for JavaScript, TheGamma script and R 
-(Section~\ref{sec:comp-gamma}). It builds a dependency graph (Section~\ref{sec:comp-deps})
+The prototype implements language runtimes for TheGamma script (Section~\ref{sec:comp-gamma}), R
+and JavaScript. It builds a dependency graph (Section~\ref{sec:comp-deps})
 and uses it to evaluate results of cells. 
 
-The data store (Section~\ref{sec:comp-data}) 
-stores data in Microsoft Azure in JSON format. Support for meta-data annotations and big data
-is not yet implemented. The protoype comes with one third-party tool -- the datadiff AI 
-assistant mentioned above (Section~\ref{sec:comp-data}). Figure~\ref{fig:proto} shows the 
-first cell of a sample Wrattler notebook analysing the UK broadband data.
+The data store (Section~\ref{sec:comp-data}) stores data in Microsoft Azure in JSON format. Support 
+for meta-data annotations and big data is not yet implemented. Storing notebook state in the data
+store also allowed us to develop an integration with Data diff \cite{datadiff},
+which provides data cleaning recommendations.
 
 \begin{figure}
 \vspace{-0.5em}
-\includegraphics[scale=0.15]{screen.png}
+\hspace{-1em}
+\includegraphics[scale=0.335]{gamma.png}
 \caption{\small{TheGamma script that downloads and aggregates UK government data, running in 
   Wrattler notebook with a live preview.}}
-\label{fig:proto}
+\label{fig:gamma}
 \vspace{-0.5em}
 \end{figure}
+
+
+%\begin{figure}
+%\vspace{-0.5em}
+%\includegraphics[scale=0.15]{screen.png}
+%\caption{\small{TheGamma script that downloads and aggregates UK government data, running in 
+%  Wrattler notebook with a live preview.}}
+%\label{fig:proto}
+%\vspace{-0.5em}
+%\end{figure}
 
 \section{Related work}
 
 The work in this paper directly follows the work on IPython and Jupyter systems
 \cite{ipython,jupyter}. Wrattler shares many properties with those and aims to address some
 of their limitations. To address reproducibility, some Jupyter extensions and systems such
-as R markdown \cite{rmarkdown} lock cells after evaluation. 
+as R markdown %\cite{rmarkdown} 
+lock cells after evaluation. 
 
-Dataflow notebooks \cite{dataflow} are attach unique hashes to cell 
+Dataflow notebooks \cite{dataflow} attach unique hashes to cell 
 evaluations. This allows the user to refer to dependencies explicitly and, in effect, construct
-a dependecy graph similar to ours manually.
-Scientific workflow systems \cite{taverna,kepler} manage evaluation of workflows over a 
-dependency graph similarly to Wrattler, but often allow editing it directly via a GUI, rather
+a dependecy graph manually.
+Scientific workflow systems \cite{taverna,kepler} manage evaluation over a 
+dependency graph similarly to Wrattler, but allow editing it directly via a GUI, rather
 than through code in a notebook.
 
 The noWorkflow project \cite{noworkflow} links the two approaches by instrumenting Jupyter 
 kernel with a mechanism for capturing provenance based on light-weight annotations.
-Vizer \cite{vizer} focuses on integrating notebooks with spreadsheet-like interface.
+Vizer~\cite{vizer} focuses on integrating notebooks with spreadsheet-like interface.
 It internally uses a data store component similar to ours, but does not keep dependency graph
 on the client.
 
-Our dependency grpah construction is inspired by Roslyn \cite{roslyn} and extends an
+Our binding process is inspired by Roslyn~\cite{roslyn} and extends an
 earlier work on TheGamma \cite{livegamma}. It is simiar to methods used in live programming 
 languages \cite{live,subtext}, incremental compilation \cite{incremental} and
 partial evaluation \cite{partial}. Wrattler adapts those methods to a notebook environment. 
@@ -441,10 +431,10 @@ it to control evaluation. This guarantees reproducibility and allows faster feed
 development.
 
 \begin{acks}
-We thank to our colleagues from the AIDA (Artificial Intelligence for data analytics) project
-Chris Williams, Zoubin Ghahramani and Ian Horrocks and attendees of a recent 
-AIDA workshop. This work was in part supported by The Alan Turing 
-Institute under the EPSRC grant EP/N510129/1.
+The authors would like to acknowledge the funding provided by the UK Government's Defence \& 
+Security Programme in support of the Alan Turing Institute and the EPSRC grant EP/N510129/1.
+We thank to our colleagues Chris Williams, Zoubin Ghahramani and Ian Horrocks and attendees 
+of a recent AIDA project workshop.
 \end{acks}
 
 \bibliography{paper}
